# ros2_bringup

./: CMakeLists.txt  README.md  package.xml  setup.cfg
config/: parms.yaml
launch/: ros2_bringup.launch.py  ros2_bringup.launch_2.py  ros2_bringup_1.launch.py  ros2_bringup_2.launch.py  stereorig.launch.py  stereorig_1.launch.py  stereorig_2.launch.py
src/: bag_node.py  debayer.py  rosbag.py  tag_detection.py
